--- a/html-css/Site/page2.html
+++ b/html-css/Site/page2.html
@@ -9,6 +9,14 @@
 <body>
     <h1>Essa é a página 2</h1>
     <p>Voltar para <a href="index.html" type="_self" rel="prev">página 1</a></p>
-    <p>Ir para <a href="../page3.html" type="_self" rel="next">página 3</a></p>
+    <p>Ir para <a href="page3.html" type="_self" rel="next">página 3</a></p>
+
+    <h1>Áudio</h1>
+    <audio preload="metadata" autoplay controls>
+        <source src="audio/audioteste.mp3" type="audio/mpeg">
+        <source src="audio/audioteste.ogg" type="audio/ogg">
+        <source src="audio/audioteste.wav" type="audio/wav">    
+        <p>Seu navegador não reproduz áudio.</p> <a href="audio/audioteste.mp3">Clique para baixar o áudio.</a>
+    </audio>
 </body>
 </html>
